--- a/app/assets/stylesheets/tariff_tools.css.scss
+++ b/app/assets/stylesheets/tariff_tools.css.scss
@@ -1,4 +1,59 @@
 @import "bootstrap";
+
+.navbar {
+    .navbar-inner {
+        background-color: #e3dac9;
+        background-image: none;
+    }
+}
+h1 {
+  font-size: 1.8em;
+  letter-spacing: 2px;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  text-align: center;
+  color: #336699;
+}
+
+h3 {
+  font-size: 1.3em;
+  letter-spacing: 1px;
+  margin-bottom: 10px;
+  text-align: center;
+  font-weight: normal;
+  color: $grayLight;
+  }
+
+p {
+  font-size: 1.1em;
+  line-height: 1.7em;
+}
+#logo {
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color: $grayLight;
+  letter-spacing: -1px;
+  padding-top: 10px; 
+/*  font-weight: bold;*/
+  line-height: 1;
+  &:hover {
+      color: #336699;
+      text-decoration: none;
+    }
+}
+ footer {
+  margin-top: 5px;
+  padding-top: 5px;
+  border-top: 1px solid #336699;
+  color: $grayLight;
+}
+small {
+  float: left;
+  margin-left: 300px;
+  text-align: center;
+}
+
 // Place all the styles related to the TariffTools controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
