--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,16 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <%= render 'layouts/shim' %>
 </head>
 <body>
-
+	<%= render 'layouts/header' %>
     <div class="container">
     	<%= yield %>
 
     	<%= debug(params) if Rails.env.development? %>
+    	 <%= render 'layouts/footer' %>
     </div>
 </body>
 </html>
+
