--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,8 +2,8 @@
   <small>
     <ul> 
       <li> 650 W. Lake - Chicago, IL </li>
-      <li> Phone: (630) 248-0777  </li>
-      <li>Email: info@gulchsolutions.com</li> 
+      <li>  (630) 248-0777  </li>
+      <li> info@gulchsolutions.com</li> 
     </ul>
    
   </small>
