Updated CSS/ HTML
-Deleted Breaks
- Changed Buttons
-Added Header/ Footer/ Shim
-Added Logo to img folder

--- a/app/views/tariff_tools/input.html.erb
+++ b/app/views/tariff_tools/input.html.erb
@@ -26,7 +26,7 @@
 			<%= f.text_field :phases, {:value => '3-phase'} %>
 
 			<br> <!-- enters a blank line, ie: line break -->
-			<%= f.submit "Submit", class: "btn btn-large btn-primary" %>
+			<%= f.submit "Submit", class: "btn btn-med btn-custom" %>
 		<% end %>
 	</div>
 </div>
