--- a/app/assets/stylesheets/tariff_tools.css.scss
+++ b/app/assets/stylesheets/tariff_tools.css.scss
@@ -3,13 +3,6 @@
 html {
   font-family: 'Monda', sans-serif;
 }
-.navbar-inner {
-    
-        background-color: #e3dac9;
-        margin-left: 50px;
-        margin-right: 50px;
-        background-image: none;
-    }
 
 h1 {
   font-size: 1.8em;
@@ -17,8 +10,7 @@ h1 {
   margin-top: 50px;
   margin-bottom: 20px;
   text-align: center;
-
-  color: #336699;
+  color: #000080;
 
 }
 
@@ -31,9 +23,34 @@ h3 {
   color: $grayLight;
   }
 
+  h4{
+    font-size: 1.2em;
+    text-align: center;
+  letter-spacing: 1px;
+  margin-bottom: 5px;
+  width: 250px;
+  margin-right: 30px;
+  font-weight: normal;
+  color: #f5f5f5;
+  background-color: #336699;
+    border-color:#336699;
+ border-style: solid;
+ border-radius: 15px 15px / 15px 15px;
+  }
+
+
+  h6{
+    font-size: 1.0em;
+    text-align: center;
+  letter-spacing: 1px;
+  margin-bottom: 10px;
+  font-weight: normal;
+  color: #000080;
+  }
+
 p {
   font-size: 1.1em;
-  line-height: 1.7em;
+  line-height: 1.0em;
   text-align: center;
   color: #000080;
 }
@@ -41,42 +58,46 @@ p {
 table {
   text-align: center;
   font-size: 1.1em;
-  color: #000080;
+background-image: linear-gradient( #f5f5f5  , #f2f3f4 );
    border-collapse: separate;
-  border-spacing: 20px;
+  border-spacing: 9px;
+  color:#000080;
+  border-color:#336699;
+ border-style: solid;
+  border-radius: 15px 15px / 15px 15px;
+ 
 }
 
 #logo {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: $grayLight;
+  color: #f2f3f4;
   letter-spacing: -1px;
   padding-top: 5px; 
 /*  font-weight: bold;*/
   line-height: 1;
   &:hover {
-      color: #336699;
+      color: #f3e5ab;
       text-decoration: none;
     }
 }
  footer {
-  margin: 1px;
-  padding-bottom: 50px;
-  border: 1px solid #336699;
-
-  color: $grayLight;
-  background-color: #ae2029 ;
-
-  color: #336699;
-
+  float:left;
+  padding-left: 10px;
+  margin-right: 110px;
+  padding-right: 310px;
+  height:60px;
+  color: #f2f3f4;
+  background-image: linear-gradient( #100c08,#100c08);
   text-align: center;
+ border-style: solid #f3e5ab;
 }
-small {
+/*small {
   float: left;
   margin-left: 300px;
   text-align: center;
-}
+}*/
 
 ul
 {
@@ -88,11 +109,28 @@ ul
 .row {
 
 
-    background-color: #dbd7d2  ; 
+   background-image: linear-gradient( #f5f5f5 , #f2f3f4 ); 
     color: #336699 ;
 
     text-align: center;
     font-size: 1.8em;
+    border-color:#336699;
+ border-style: solid;
+  border-radius: 15px 15px / 15px 15px;
 }
-
-
+.top {
+ background-image: linear-gradient( #f5f5f5 , #f2f3f4 );
+ width:500px;
+ margin-left: 200px; 
+ word-spacing: 2px;
+ padding-bottom: 10px;
+ border-color:#336699;
+ border-style: solid;
+ border-radius: 15px 15px / 15px 15px;
+}
+.group{
+  width:420px;
+  margin-left: 20px;
+  margin-top: 30px;
+  border-bottom: solid #336699;
+}
