--- a/app/views/tariff_tools/tool.html.erb
+++ b/app/views/tariff_tools/tool.html.erb
@@ -1,6 +1,7 @@
 <h1>Bill Comparison (Demo)</h1>
 
-<p> <!-- gets all the data needed to display the bill -->
+<div class="top"> <!-- gets all the data needed to display the bill -->
+	<p>
 	<% @zip = session[:zip_code] %>
 	<% @demand = session[:demand_in_kW] %>
 	<% @usage = session[:usage_in_kWh] %>
@@ -16,37 +17,46 @@
 	<% @tariffs = TariffTariff.tariffs(@billing_class) %>
 	<% @line_items = TariffLineItems.line_items(@tariffs, @date, @season) %>
 	<% @bill_groups = TariffBillGroup.bill_groups(@billing_class) %>	
-	
+	</P>
 	<!-- shows the utility and billing period -->
+	<p>
 	<%= @date %>
-	<br> <!-- enters a blank line, ie: line break -->
-	<%= @utility.utility_name %>
-	<br> <!-- enters a blank line, ie: line break -->
-	<strong> Billing Period: <%= @meter_read["start_date"] %> to <%= @meter_read["end_date"] %> </strong>
-	<br> <!-- enters a blank line, ie: line break -->
-
 </p>
+<p>
+	<%= @utility.utility_name %>
+	</p>
+	<p>
+	
+	<strong> Billing Period: <%= @meter_read["start_date"] %> to <%= @meter_read["end_date"] %> </strong>
+	</p>
+	</p>
 
-<p> <!-- this area shows the header information for the bill -->
-	kWh used = <%= @usage %>
-	<br> <!-- enters a blank line, ie: line break -->
-	Billed Load in kW = <%= @demand %>
-	<br> <!-- enters a blank line, ie: line break -->
-	<br> <!-- enters a blank line, ie: line break -->
-	Rate: <%= @billing_class[0].billing_class_name %>
-	<br> <!-- enters a blank line, ie: line break -->
+
+ <!-- this area shows the header information for the bill -->
+	
+ 	<p>
+		kWh used = <%= @usage %>
+	</p>
+	<p>
+		Billed Load in kW = <%= @demand %>
+	</p>
+	<p>
+		Rate: <%= @billing_class[0].billing_class_name %>
+	</p>
+</div>
 
 	<!-- sorts the line items by bill group -->
 	<% @line_items.sort_by{ |i| i.bill_group_order} %>
 	<% @bill_groups.sort_by{ |i| i.bill_group_order} %>
 
-</p>
+
+
 
 <% @bill_total = 0 %>
 <% @bill_groups.each do |j| %>
 	<!-- shows the name of the section of the bill -->
-	<strong><%= j.bill_group_name %></strong>
-	<br> <!-- enters a blank line, ie: line break -->
+	<h5><%= j.bill_group_name %></h5>
+
 	
 	<table> <!-- to test my understanding of tables -->
 		<% @bill_group_total = 0 %>
@@ -75,7 +85,17 @@
 							<%= number_to_currency(i.line_item_rate * @demand.to_f) %> <!-- total -->
 						</td> 
 					<% when '$/kWh' %>
-						<td> <%= @usage %> </td>	<!-- value -->
+						<td> </td>
+						<td> </td>
+						<td> </td>
+						<td> </td>
+						<td> </td>
+						<td> </td>
+						<td> </td>
+						<td> </td>
+
+						<!-- The td spaces out the sencond table to appear in line with the first -->
+						<td> <%= @usage %> </td> <!-- value -->
 						<td> kWh </td> 	<!-- value label -->
 						<td> x </td>	<!-- math symbol -->
 						<td> <%= number_to_currency(i.line_item_rate, precision: 6) %> </td> 	<!-- rate -->
@@ -83,6 +103,7 @@
 							<% @bill_group_total += (i.line_item_rate * @usage.to_f) %>
 							<%= number_to_currency(i.line_item_rate * @usage.to_f) %> <!-- total -->
 						</td> 
+
 					<% when 'Stepped' %>
 						<% @stepped_rates = TariffSteppedRates.stepped_rates(i.id) %>
 						<% @stepped_rates.each do |k| %>
@@ -107,8 +128,10 @@
 										<td> x </td>	<!-- math symbol -->
 										<td> <%= number_to_currency(k.line_item_rate, precision: 6) %> </td> 	<!-- rate -->
 										<td> 
+											
 											<% @bill_group_total += (k.line_item_rate * @temp_value) %>
 											<%= number_to_currency(k.line_item_rate * @temp_value) %> <!-- total -->
+
 										</td>
 									</tr> 
 								<% end %>
@@ -148,12 +171,17 @@
 				</tr>
 			<% end %>
 		<% end %>
+		
 	</table>
 	<!-- determines the total for that section of the bill -->
-	&nbsp &nbsp &nbsp &nbsp &nbsp Total for <%= j.bill_group_name %> = <%= number_to_currency(@bill_group_total) %>
-	<% @bill_total += @bill_group_total %>
-	<br> <!-- enters a blank line, ie: line break -->
+	<div class="group">
+	<p>&nbsp &nbsp &nbsp &nbsp &nbsp Total for <%= j.bill_group_name %> = <%= number_to_currency(@bill_group_total) %>
+	<% @bill_total += @bill_group_total %></p>
+	</div>
 <% end %>
-<p>
+
+<div class="total">
+<h4>
 	Total Bill = <%= number_to_currency(@bill_total) %>
-</p>
+</h4>
+</div>
