--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -26,7 +26,7 @@
       <%= f.password_field :password_confirmation %>
       <br> <!-- enters a blank line, ie: line break -->
 
-      <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+      <%= f.submit "Create my account", class: "btn btn-med btn-custom" %>
     <% end %>
   </div>
 </div>
