Added home page
-Changed logo to link to home
- included "sign in" tab in nav bar
- cleaned up extra tables in tool.html
- added logo to home page

--- a/app/assets/stylesheets/tariff_tools.css.scss
+++ b/app/assets/stylesheets/tariff_tools.css.scss
@@ -134,3 +134,17 @@ ul
   margin-top: 30px;
   border-bottom: solid #336699;
 }
+
+.home {
+  margin-top: 70px;
+  margin-left: 65px;
+}
+
+.tag{
+  margin-top: 50px;
+  color: #336699 ;
+
+    text-align: center;
+    font-size: 1.95em;
+    border-color:#336699;
+}
