--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,10 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "Gulch Solutions", '#', id: "logo" %>
+      <%= link_to "Gulch Solutions", root_path, id: "logo" %>
+      <ul class="nav pull-right">
+          <li><%= link_to "Sign in", signin_path %></li>
+        </ul>
       </div>
   </div>
 </header>
