Updated static pages
- CSS
- Added "Company" tab at top
- Footer now stays at Bottom
- Changed to "View Demo"
-Changed footer color
- Cleaned up Navbar
- Added instructions to create an account
- Added Slogan "Empowering Energy Sales"
- Updated logo on homepage

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,15 +1,15 @@
-<footer class="footer">
+<footer id="footer">
   <small>
     <ul> 
       <li> 650 W. Lake - Chicago, IL </li>
       <li>  (630) 248-0777  </li>
-      <li> info@gulchsolutions.com</li> 
+      <li> <a href="mailto:info@gulchsolutions.com"class="link"> info@gulchsolutions.com</a></li> 
     </ul>
    
   </small>
-  <nav>
+ <!--  <nav>
     <ul>
  
     </ul>
-  </nav>
+  </nav> -->
 </footer>
