--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,11 @@
     <div class="container">
       <%= link_to "Gulch Solutions", root_path, id: "logo" %>
       <ul class="nav pull-right">
-          <li><%= link_to "Sign in", signin_path %></li>
+      	  <li><%= link_to " View Demo", signin_path %></li>
+           <li><%= link_to "Company", company_path %></li>
+          <li><%= link_to "Contact", contact_path %></li>
+
+
         </ul>
       </div>
   </div>
