--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,12 +1,13 @@
+/* Color Guide: 
+  Navy Blue: #1C3664
+  Gold: #999965 (originally #f3e5ab)
+  Silver: #f2f3f4
+*/
+
 @import "bootstrap";
 
 html {
   font-family: 'Monda', sans-serif;
-
-}
-.navbar
-{
-    background: red;
 }
 
 h1 {
@@ -15,9 +16,9 @@ h1 {
   margin-top: 50px;
   margin-bottom: 20px;
   text-align: center;
-  color: #000080;
-
+  color: #00004d;
 }
+
 
 h3 {
   font-size: 1.3em;
@@ -38,7 +39,7 @@ h3 {
   font-weight: normal;
   color: #f5f5f5;
   background-color: #336699;
-    border-color:#336699;
+    border-color:#1C3664;
  border-style: solid;
  border-radius: 15px 15px / 15px 15px;
   }
@@ -50,25 +51,24 @@ h3 {
   letter-spacing: 1px;
   margin-bottom: 10px;
   font-weight: normal;
-  color: #000080;
+  color: #1C3664;
   }
 
 p {
   font-size: 1.1em;
   line-height: 1.0em;
   text-align: center;
-  color: #000080;
+  color: #1C3664;
 }
 
 table {
   text-align: center;
   font-size: 1.1em;
-  margin-left: 30px;
 background-image: linear-gradient( #f5f5f5  , #f2f3f4 );
    border-collapse: separate;
   border-spacing: 9px;
   color:#000080;
-  border-color:#336699;
+  border-color:#1C3664;
  border-style: solid;
   border-radius: 15px 15px / 15px 15px;
  
@@ -89,23 +89,19 @@ background-image: linear-gradient( #f5f5f5  , #f2f3f4 );
     }
 }
  footer {
-  position: absolute;
-  float:left;
-  margin-right: 110px;
-  margin-left: 80px;
-  padding-right: 310px;
-  padding-left: 280px;
+ position: fixed;
+ bottom: 0;
+ left:0;
+ padding-right: 50px;
   height:60px;
+  width:100%;
+  z-index: 1;
   color: #f2f3f4;
-  background-image: linear-gradient( #100c08,#100c08);
+  background-image: linear-gradient( #999965,#999965);
   text-align: center;
- border-style: solid #f3e5ab;
+
 }
-/*small {
-  float: left;
-  margin-left: 300px;
-  text-align: center;
-}*/
+
 
 ul
 {
@@ -118,21 +114,21 @@ ul
 
 
    background-image: linear-gradient( #f5f5f5 , #f2f3f4 ); 
-    color: #336699 ;
+    color: #1C3664 ;
 
     text-align: center;
     font-size: 1.8em;
-    border-color:#336699;
+    border-color:#1C3664;
  border-style: solid;
   border-radius: 15px 15px / 15px 15px;
 }
 .top {
- background-image: linear-gradient( #f5f5f5 , #f2f3f4 );
+ /*background-image: linear-gradient( #f5f5f5 , #f2f3f4 );*/
  width:500px;
  margin-left: 200px; 
  word-spacing: 2px;
  padding-bottom: 10px;
- border-color:#336699;
+ /*border-color:#1C3664;*/
  border-style: solid;
  border-radius: 15px 15px / 15px 15px;
 }
@@ -140,5 +136,47 @@ ul
   width:420px;
   margin-left: 20px;
   margin-top: 30px;
-  border-bottom: solid #336699;
+  border-bottom: solid #1C3664;
 }
+
+.home {
+  padding-top: 100px;
+  margin-bottom: 50px;
+  margin-right: 30px;
+}
+
+.tag{
+  margin-top: 50px;
+  color: #1C3664;
+  margin-right: 125px;
+    text-align: center;
+    font-size: 1.75em;
+    font-weight: normal;
+}
+
+/*li only shows up on footer...*/
+
+li{
+  color: #f2f3f4;
+  &:hover {
+      color: #f3e5ab;}
+}
+ .button {
+  margin-top: 20px;
+  margin-left: 325px;
+ }
+
+.bio {
+      font-size: 1.0em;
+    text-align: left;
+  letter-spacing: 1px;
+  margin-right: 350px;
+  margin-left: 40px;
+  margin-top: 15px;
+  font-weight: normal;
+  font-family: helvetica;
+  font-color: #1C3664;
+}
+
+a:link {text-decoration: none}
+
