--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,9 @@
 <div class="home">
 <%= link_to image_tag("gulch_solutions_header.png", alt: "Gulch"), '#' %>
 </div>
-<div class="tag"
-<h2> Improving the Way You Sell Power </h2>
-<%= link_to "Tour a Demo", signin_path, class: "btn btn-med btn-custom" %>
+<div class="tag">
+<h2> Empowering Energy Sales </h2>
+</div>
+<div class="button">
+<%= link_to "View Demo", signin_path, class: "btn btn-med btn-custom" %>
 </div>
