--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -13,8 +13,8 @@ html {
 h1 {
   font-size: 1.8em;
   letter-spacing: 2px;
-  margin-top: 50px;
-  margin-bottom: 20px;
+  margin-top: 15%;
+  margin-bottom: 2%;
   text-align: center;
   color: #00004d;
 }
@@ -23,7 +23,7 @@ h1 {
 h3 {
   font-size: 1.3em;
   letter-spacing: 1px;
-  margin-bottom: 10px;
+  margin-bottom: 1% ;
   text-align: center;
   font-weight: normal;
   color: $grayLight;
@@ -64,7 +64,7 @@ p {
 table {
   text-align: center;
   font-size: 1.1em;
-background-image: linear-gradient( #f5f5f5  , #f2f3f4 );
+background-image: linear-gradient( #f5f5f5, #f2f3f4);
    border-collapse: separate;
   border-spacing: 9px;
   color:#000080;
@@ -76,11 +76,11 @@ background-image: linear-gradient( #f5f5f5  , #f2f3f4 );
 
 #logo {
   float: left;
-  margin-right: 10px;
+  margin-right: 1%;
   font-size: 1.7em;
   color: #f2f3f4;
   letter-spacing: -1px;
-  padding-top: 5px; 
+  padding-top: .5%; 
 /*  font-weight: bold;*/
   line-height: 1;
   &:hover {
@@ -92,12 +92,12 @@ background-image: linear-gradient( #f5f5f5  , #f2f3f4 );
  position: fixed;
  bottom: 0;
  left:0;
- padding-right: 50px;
+ padding-right: 5%;
   height:60px;
   width:100%;
   z-index: 1;
-  color: #f2f3f4;
-  background-image: linear-gradient( #999965,#999965);
+  color: #1C3664;
+  background-image: linear-gradient( #f5f5f5,#f2f3f4);
   text-align: center;
 
 }
@@ -111,8 +111,6 @@ ul
   color: rgba(255, 255, 255, 0.75);
 }
 .row {
-
-
    background-image: linear-gradient( #f5f5f5 , #f2f3f4 ); 
     color: #1C3664 ;
 
@@ -124,31 +122,32 @@ ul
 }
 .top {
  /*background-image: linear-gradient( #f5f5f5 , #f2f3f4 );*/
- width:500px;
- margin-left: 200px; 
- word-spacing: 2px;
- padding-bottom: 10px;
+ width:50%;
+ margin-left: 20%; 
+ word-spacing: 2%;
+ padding-bottom: 1%;
  /*border-color:#1C3664;*/
  border-style: solid;
  border-radius: 15px 15px / 15px 15px;
 }
 .group{
-  width:420px;
-  margin-left: 20px;
-  margin-top: 30px;
+  width:42%;
+  margin-left: 2%;
+  margin-top: 3%;
   border-bottom: solid #1C3664;
 }
 
 .home {
-  padding-top: 100px;
-  margin-bottom: 50px;
-  margin-right: 30px;
+  margin-top: 17%;
+  margin-left: 12%;
+  margin-bottom: 5%;
+ width: 100%;
 }
 
 .tag{
-  margin-top: 50px;
+  margin-top: 5%;
+  margin-right: -3%;
   color: #1C3664;
-  margin-right: 125px;
     text-align: center;
     font-size: 1.75em;
     font-weight: normal;
@@ -157,22 +156,22 @@ ul
 /*li only shows up on footer...*/
 
 li{
-  color: #f2f3f4;
+  color: #1C3664;
   &:hover {
       color: #f3e5ab;}
 }
  .button {
-  margin-top: 20px;
-  margin-left: 325px;
+  margin-top: 2%;
+  margin-left: 47.5%;
  }
 
 .bio {
       font-size: 1.0em;
     text-align: left;
   letter-spacing: 1px;
-  margin-right: 350px;
-  margin-left: 40px;
-  margin-top: 15px;
+  margin-right: 35%;
+  margin-left: 4%;
+  margin-top: 1.5%;
   font-weight: normal;
   font-family: helvetica;
   font-color: #1C3664;
