--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -13,7 +13,7 @@ html {
 h1 {
   font-size: 1.8em;
   letter-spacing: 2px;
-  margin-top: 15%;
+  margin-top: 5%;
   margin-bottom: 2%;
   text-align: center;
   color: #00004d;
@@ -38,7 +38,7 @@ h3 {
   margin-right: 30px;
   font-weight: normal;
   color: #f5f5f5;
-  background-color: #336699;
+  background-color: #1C3664;
     border-color:#1C3664;
  border-style: solid;
  border-radius: 15px 15px / 15px 15px;
@@ -96,10 +96,9 @@ background-image: linear-gradient( #f5f5f5, #f2f3f4);
   height:60px;
   width:100%;
   z-index: 1;
-  color: #1C3664;
-  background-image: linear-gradient( #f5f5f5,#f2f3f4);
+  background-image: linear-gradient( #808080,#808080);
+  border-top: 2px, blue;
   text-align: center;
-
 }
 
 
@@ -111,7 +110,7 @@ ul
   color: rgba(255, 255, 255, 0.75);
 }
 .row {
-   background-image: linear-gradient( #f5f5f5 , #f2f3f4 ); 
+   background-image: linear-gradient(#f5f5f5, #f2f3f4); 
     color: #1C3664 ;
 
     text-align: center;
