--- a/app/assets/stylesheets/tariff_tools.css.scss
+++ b/app/assets/stylesheets/tariff_tools.css.scss
@@ -96,7 +96,7 @@ background-image: linear-gradient( #f5f5f5, #f2f3f4);
   height:60px;
   width:100%;
   z-index: 1;
-  background-image: linear-gradient( #808080,#808080);
+  background-image: linear-gradient( #bbbbbb,#bbbbbb);
   border-top: 2px, blue;
   text-align: center;
 }
@@ -139,7 +139,7 @@ ul
 .home {
   margin-top: 17%;
   margin-left: 12%;
-  margin-bottom: 5%;
+  margin-bottom: 4%;
  width: 100%;
 }
 
@@ -176,5 +176,6 @@ li{
   font-color: #1C3664;
 }
 
-a:link {text-decoration: none}
-
+.total{
+  margin-bottom: 3%;
+}
