--- a/app/assets/stylesheets/tariff_tools.css.scss
+++ b/app/assets/stylesheets/tariff_tools.css.scss
@@ -32,10 +32,10 @@ h3 {
   h4{
     font-size: 1.2em;
     text-align: center;
-  letter-spacing: 1px;
-  margin-bottom: 5px;
+  letter-spacing: 1%;
+  margin-bottom: 5%;
   width: 250px;
-  margin-right: 30px;
+  margin-right: 3%;
   font-weight: normal;
   color: #f5f5f5;
   background-color: #1C3664;
@@ -93,11 +93,11 @@ background-image: linear-gradient( #f5f5f5, #f2f3f4);
  bottom: 0;
  left:0;
  padding-right: 5%;
-  height:60px;
+  height:55px;
   width:100%;
   z-index: 1;
   background-image: linear-gradient( #bbbbbb,#bbbbbb);
-  border-top: 2px, blue;
+  margin-top: 2%;
   text-align: center;
 }
 
@@ -112,7 +112,6 @@ ul
 .row {
    background-image: linear-gradient(#f5f5f5, #f2f3f4); 
     color: #1C3664 ;
-
     text-align: center;
     font-size: 1.8em;
     border-color:#1C3664;
