--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -49,7 +49,7 @@ h3 {
     font-size: 1.0em;
     text-align: center;
   letter-spacing: 1px;
-  margin-bottom: 10px;
+  margin-bottom: .8%;
   font-weight: normal;
   color: #1C3664;
   }
@@ -122,8 +122,8 @@ ul
  /*background-image: linear-gradient( #f5f5f5 , #f2f3f4 );*/
  width:50%;
  margin-left: 20%; 
- word-spacing: 2%;
- padding-bottom: 1%;
+ word-spacing: 1%;
+ padding-bottom: .5%;
  /*border-color:#1C3664;*/
  border-style: solid;
  border-radius: 15px 15px / 15px 15px;
@@ -131,7 +131,7 @@ ul
 .group{
   width:42%;
   margin-left: 2%;
-  margin-top: 3%;
+  margin-top: 2%;
   border-bottom: solid #1C3664;
 }
 
