Include sign-in & sign-out ability

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,6 +18,30 @@
       <%= f.text_field :email %>
       <br> <!-- enters a blank line, ie: line break -->
 
+      <%= f.label :phone %>
+      <%= f.text_field :phone %>
+      <br> <!-- enters a blank line, ie: line break -->
+
+      <%= f.label :company %>
+      <%= f.text_field :company %>
+      <br> <!-- enters a blank line, ie: line break -->
+
+      <%= f.label :address %>
+      <%= f.text_field :address %>
+      <br> <!-- enters a blank line, ie: line break -->
+
+      <%= f.label :city %>
+      <%= f.text_field :city %>
+      <br> <!-- enters a blank line, ie: line break -->
+
+      <%= f.label :state %>
+      <%= f.text_field :state %>
+      <br> <!-- enters a blank line, ie: line break -->
+
+      <%= f.label :zip %>
+      <%= f.text_field :zip %>
+      <br> <!-- enters a blank line, ie: line break -->
+
       <%= f.label :password %>
       <%= f.password_field :password %>
       <br> <!-- enters a blank line, ie: line break -->
