--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,11 +3,17 @@
     <div class="container">
       <%= link_to "Gulch Solutions", root_path, id: "logo" %>
       <ul class="nav pull-right">
-      	  <li><%= link_to " View Demo", signin_path %></li>
-           <li><%= link_to "Company", company_path %></li>
-          <li><%= link_to "Contact", contact_path %></li>
-
-
+      	  <% if signed_in? %>
+            <li><%= link_to "Company",    company_path %></li>
+            <li><%= link_to "Contact",    contact_path %></li>
+            <li><%= link_to "Sign Out",   signout_path %></li>            
+          <% else %>
+            <li><%= link_to "View Demo",  signin_path %></li>
+            <li><%= link_to "Company",    company_path %></li>
+            <li><%= link_to "Contact",    contact_path %></li>
+            <li><%= link_to "Sign In",    signin_path %></li>
+          <% end %>
+          
         </ul>
       </div>
   </div>
