--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,52 @@
-<%= @user.first_name %> <%= @user.first_name %>, <%= @user.email %>
+<% provide(:title, "User profile") %>
+<h1>View your proifle</h1>
+
+<div class="row">
+  <div class="span6 offset3">
+    <%= form_for(@user) do |f| %>
+      <%= render 'shared/error_messages' %>
+
+      <%= f.label :first_name %>
+      <%= f.text_field :first_name %>
+      <br> <!-- enters a blank line, ie: line break -->
+
+      <%= f.label :last_name %>
+      <%= f.text_field :last_name %>
+      <br> <!-- enters a blank line, ie: line break -->
+
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+      <br> <!-- enters a blank line, ie: line break -->
+
+      <%= f.label :phone %>
+      <%= f.text_field :phone %>
+      <br> <!-- enters a blank line, ie: line break -->
+
+      <%= f.label :company %>
+      <%= f.text_field :company %>
+      <br> <!-- enters a blank line, ie: line break -->
+
+      <%= f.label :address %>
+      <%= f.text_field :address %>
+      <br> <!-- enters a blank line, ie: line break -->
+
+      <%= f.label :city %>
+      <%= f.text_field :city %>
+      <br> <!-- enters a blank line, ie: line break -->
+
+      <%= f.label :state %>
+      <%= f.text_field :state %>
+      <br> <!-- enters a blank line, ie: line break -->
+
+      <%= f.label :zip %>
+      <%= f.text_field :zip %>
+      <br> <!-- enters a blank line, ie: line break -->
+    
+    <% end %>
+
+	<%= link_to "Edit", edit_user_path(@user) %>	
+	<br> <!-- enters a blank line, ie: line break -->
+	<br> <!-- enters a blank line, ie: line break -->
+	<br> <!-- enters a blank line, ie: line break -->
+	<br> <!-- enters a blank line, ie: line break -->
+</div>
