--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Contact') %>
+<title>Contact</title>
 <h1>Contact</h1>
 <p>
 Please contact us with any questions or inquiries. You can email us at info@gulchsolutions.com or give us a call at (630-248-0777)
