--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,4 @@
+<title>Gulch Solutions</title>
 <div class="home">
 <%= link_to image_tag("gulch_solutions_header.png", alt: "Gulch"), '#' %>
 </div>
