--- a/app/views/static_pages/company.html.erb
+++ b/app/views/static_pages/company.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'About Us') %>
+<title>About Us</title>
 <h1>About Us</h1>
 <!-- <p>
   Gulch provides context for energy billing and usage. At the intersection of Energy and Technology, Gulch provides unparalled insight into saving money and energy. </p> -->
