--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,11 @@
-<% provide(:title, 'Sign up') %>
+<title>Sign Up</title>
 <h1>Sign up</h1>
 
 <div class="row">
   <div class="span6 offset3">
     <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
-
+      <%= render 'shared/error_messages', object: f.object %>
+      
       <%= f.label :first_name %>
       <%= f.text_field :first_name %>
       <br> <!-- enters a blank line, ie: line break -->
