--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,52 +1,51 @@
-<% provide(:title, "User profile") %>
-<h1>View your proifle</h1>
-
+<title>Profile</title>
+<h1>View your profile</h1>
 <div class="row">
   <div class="span6 offset3">
-    <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
 
-      <%= f.label :first_name %>
-      <%= f.text_field :first_name %>
-      <br> <!-- enters a blank line, ie: line break -->
-
-      <%= f.label :last_name %>
-      <%= f.text_field :last_name %>
-      <br> <!-- enters a blank line, ie: line break -->
-
-      <%= f.label :email %>
-      <%= f.text_field :email %>
-      <br> <!-- enters a blank line, ie: line break -->
-
-      <%= f.label :phone %>
-      <%= f.text_field :phone %>
-      <br> <!-- enters a blank line, ie: line break -->
-
-      <%= f.label :company %>
-      <%= f.text_field :company %>
-      <br> <!-- enters a blank line, ie: line break -->
-
-      <%= f.label :address %>
-      <%= f.text_field :address %>
-      <br> <!-- enters a blank line, ie: line break -->
-
-      <%= f.label :city %>
-      <%= f.text_field :city %>
-      <br> <!-- enters a blank line, ie: line break -->
-
-      <%= f.label :state %>
-      <%= f.text_field :state %>
-      <br> <!-- enters a blank line, ie: line break -->
-
-      <%= f.label :zip %>
-      <%= f.text_field :zip %>
-      <br> <!-- enters a blank line, ie: line break -->
-    
-    <% end %>
+      <table> 
+            <tr>
+                  <td> First Name: </td>
+                  <td><%= @user.first_name %></td>
+            </tr>
+            <tr>
+                  <td> Last Name: </td>
+                  <td><%= @user.last_name %></td>
+            </tr>
+            <tr>
+                  <td> Email: </td>
+                  <td><%= @user.email %></td>
+            </tr>
+            <tr>
+                  <td> Phone </td>
+                  <td><%= @user.phone %></td>
+            </tr>
+            <tr>
+                  <td> Company: </td>
+                  <td><%= @user.company %></td>
+            </tr>
+            <tr>
+                  <td> Addres: </td>
+                  <td><%= @user.address %></td>
+            </tr>
+            <tr>
+                  <td> City: </td>
+                  <td><%= @user.city %></td>
+            </tr>
+            <tr>
+                  <td> State: </td>
+                  <td><%= @user.state %></td>
+            </tr>
+            <tr>
+                  <td> Zip: </td>
+                  <td><%= @user.zip %></td>
+            </tr>
+      </table>
 
 	<%= link_to "Edit", edit_user_path(@user) %>	
 	<br> <!-- enters a blank line, ie: line break -->
 	<br> <!-- enters a blank line, ie: line break -->
 	<br> <!-- enters a blank line, ie: line break -->
 	<br> <!-- enters a blank line, ie: line break -->
+   </div>
 </div>
