--- a/app/views/tariff_tools/tool.html.erb
+++ b/app/views/tariff_tools/tool.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Bill Comparison (Demo)</h1>
 
+<p id="notice"><%= notice %></p>
+
 <div class="top"> <!-- gets all the data needed to display the bill -->
 	<p>
 	<% @zip = Site.last.zip_code %>
