--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,8 @@
 <title>Profile</title>
 <h1>View your profile</h1>
+
+<p id="notice"><%= notice %></p>
+
 <div class="row">
   <div class="span6 offset3">
 
