--- a/app/views/tariff_tools/input.html.erb
+++ b/app/views/tariff_tools/input.html.erb
@@ -8,39 +8,43 @@
 
 	<div class="span6 offset3">
 
-		<%=form_for(Site.new, url: '/input/save' ) do |f| %>
-		    <%#= render 'shared/error_messages', object: f.object %>
-			
-			<% if Site.new.errors.any? %>
-				<h2>Errors:</h2>
-				<ul>
-					<% Site.new.errors.full_messages.each do |message| %>
-						<li><%= message %></li>
-					<% end %>
-				</ul>
-			<% end %>
+		<%=form_for(@site, url: '/input/save', html: {method: :post } ) do |f| %>
+<%#=form_for(@site, url: compile_documents_path(@site), format: :csv, html: { method: :post}) do |f|%>
 
 
+		<%#=form_for(@site, url: '/input/save' ) do |f| %>
+		    <%= render 'shared/error_messages', object: f.object %>
 
 			<br> <!-- enters a blank line, ie: line break -->
 			<%= f.label :zip_code %>
 			<%= f.text_field :zip_code, {:value => '07004'} %>
 
 			<br> <!-- enters a blank line, ie: line break -->
-			<%= f.label :demand_in_kW %>
-			<%= f.text_field :demand_in_kW, {:value => '100'} %>
-
-			<br> <!-- enters a blank line, ie: line break -->
-			<%= f.label :usage_in_kWh %>
-			<%= f.text_field :usage_in_kWh, {:value => '10000'} %>
-
-			<br> <!-- enters a blank line, ie: line break -->
-			<%= f.label :bill_date %>
-			<%= f.text_field :bill_date, {:value => '10/1/2013'} %>
-
-			<br> <!-- enters a blank line, ie: line break -->
 			<%= f.label :phases %>
-			<%= f.text_field :phases, {:value => '3-phase'} %>
+			<%= f.select :phases, ['3-phase','1-phase'] %>
+
+
+			<%# This is a hack to deal with initially invalid input for the @site_load_profile object %>
+			<% if @site_load_profile.nil? %>
+				<% @site_load_profile = SiteLoadProfile.new %>
+			<% end %>
+
+			<%=fields_for @site_load_profile do |g| %>
+				<%= render 'shared/error_messages', object: g.object %>
+
+				<br> <!-- enters a blank line, ie: line break -->
+				<%= g.label :demand_in_kW, "Demand (in kW)" %>
+				<%= g.text_field :demand_in_kW, {:value => '100'} %>
+
+				<br> <!-- enters a blank line, ie: line break -->
+				<%= g.label :usage_in_kWh, "Usage (in kWh)" %>
+				<%= g.text_field :usage_in_kWh, {:value => '10000'} %>
+
+				<br> <!-- enters a blank line, ie: line break -->
+				<%= g.label :bill_date %>
+				<%= g.text_field :bill_date, {:value => '10/1/2013'} %>
+
+			<% end %>
 
 			<br> <!-- enters a blank line, ie: line break -->
 			<%= f.submit "Submit", class: "btn btn-med btn-custom" %>
