--- a/app/views/static_pages/company.html.erb
+++ b/app/views/static_pages/company.html.erb
@@ -7,11 +7,28 @@
   <h3> Industry Insights </h3>
   <h3> Advanced Sales Tools </h3>
 
+ <h5> Vision: </h5>
+  	<div class="bio">
+  		To provide clarity, understanding, and insight which drives the best decisions regarding energy. 	
+  	</div>  
+
+  <h5> Mission: </h5>
+  	<div class="bio">
+  		We develop data based tools that de-mystify energy. 
+  	</div>
+  	<div class="bio"> 
+  		these tools utilize public data, utility data, and user inputs to deliver data driven insights specific to each individual users' sources, uses, and costs of energy. 
+  	</div>
+  	<div class="bio"> 
+  		Empowering users to make the best possible decsions regarding energy.
+  	</div>
+
+
 <h2> Team: </h2>
 <h5> J.S. Roy </h5>
-<h5> Chief Operating Officer </h5>
+<h5> Chief Executive Officer </h5>
 <div class="bio">
-	As Gulch Solutions’ COO, J.S. brings many years of experience in the energy industry, successfully operating and growing two prior start-ups in the industry – Power2Switch and SoCore Energy. </div>
+	As Gulch Solutions’ CEO, J.S. brings many years of experience in the energy industry, successfully operating and growing two prior start-ups in the industry – Power2Switch and SoCore Energy. </div>
 <div class="bio">
 	At Power2Switch, J.S. brought a data-driven approach to understanding, managing and growing the business of this web-based electricity broker.  He championed strategies to increase site traffic, developed and implemented supplier specific strategy, launched P2S’s offering in new markets, and developed several analytics-based tools to support P2S’s sales efforts.</div>
 <div class="bio">
@@ -25,9 +42,9 @@
 
 <h5> Kevin Lillie </h5>
 
-<h5> Chief Noodling Officer </h5>
+<h5> VP Development </h5>
 <div class="bio">
-Serving as Gulch Solutions’ Chief Noodler, Kevin integrates a technical background with data-driven strategies in the energy industry. </div>
+Serving as Gulch Solutions’ VP Development, Kevin integrates a technical background with data-driven strategies in the energy industry. </div>
 <div class="bio">
 At Power2Switch, Kevin implemented strategies which increased SEO rankings, website traffic and customer conversions. Additionally, he focused on clarifying energy information to better demonstrate the benefits of switching electricity providers.</div>
 <div class="bio">
