Fixed Contact spelling/ CSS
Updated CSS to avoid bullet point

Spelled "solutions" correctly

--- a/app/assets/stylesheets/tariff_tools.css.scss
+++ b/app/assets/stylesheets/tariff_tools.css.scss
@@ -175,3 +175,11 @@ li{
   font-family: helvetica;
   font-color: #1C3664;
 }
+
+link{
+   font-size: 1.1em;
+  line-height: 1.0em;
+  text-align: center;
+  color: #1C3664;
+
+}
