--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -3,11 +3,11 @@
 
 <p> Gulch Solutions serves both retail electric providers and commercial brokerages</p>
 
-<p> If you are interested in learning about the additional products we offer that are tailored for Retail Electric Providers, please email <li> <a href="mailto:reps@gulchsolutions.com"class="link"> reps@gulchsoltuions.com</a></li></p>
+<p> If you are interested in learning about the additional products we offer that are tailored for Retail Electric Providers, please email <li> <a href="mailto:reps@gulchsolutions.com"class="link"> reps@gulchsolutions.com</a></li></p>
 
-<p> If you are interested in learning about our products tailored for energy brokerages, please email <li> <a href="mailto:brokers@gulchsolutions.com"class="link"> brokers@gulchsoltuions.com</a></li> </p>
+<p> If you are interested in learning about our products tailored for energy brokerages, please email <li> <a href="mailto:brokers@gulchsolutions.com"class="link"> brokers@gulchsolutions.com</a></li> </p>
 <p>
-In order to learn more about us, or inquire regarding custom products, please email <li><a href="mailto:custom@gulchsolutions.com"class="link"> brokers@gulchsoltuions.com</a></li>
+In order to learn more about us, or inquire regarding custom products, please email <li><a href="mailto:custom@gulchsolutions.com"class="link"> brokers@gulchsolutions.com</a></li>
 </p>
 
-<p> For all other concerns, please email us <a href="mailto:info@gulchsolutions.com"class="link"> info@gulchsoltuions.com</a></li></p>
+<p> For all other concerns, please email us <a href="mailto:info@gulchsolutions.com"class="link"> info@gulchsolutions.com</a></li></p>
