--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -48,7 +48,7 @@
 
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation %>
-     <br>  --> -->--> <!-- enters a blank line, ie: line break -->
+     <br> <!-- enters a blank line, ie: line break -->
 
       <%= f.submit "Create my account", class: "btn btn-med btn-custom" %>
     <% end %>
