Div attempt at form...

--- a/app/assets/stylesheets/tariff_tools.css.scss
+++ b/app/assets/stylesheets/tariff_tools.css.scss
@@ -183,3 +183,11 @@ link{
   color: #1C3664;
 
 }
+.left{
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.right{
+  display: inline-block;
+}
