--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -113,10 +113,11 @@ ul
    background-image: linear-gradient(#f5f5f5, #f2f3f4); 
     color: #1C3664 ;
     text-align: center;
-    font-size: 1.8em;
+    font-size: 1.2em;
     border-color:#1C3664;
  border-style: solid;
   border-radius: 15px 15px / 15px 15px;
+  margin-bottom: 5%;
 }
 .top {
  /*background-image: linear-gradient( #f5f5f5 , #f2f3f4 );*/
@@ -173,4 +174,20 @@ li{
   font-weight: normal;
   font-family: helvetica;
   font-color: #1C3664;
+}
+
+link{
+   font-size: 1.1em;
+  line-height: 1.0em;
+  text-align: center;
+  color: #1C3664;
+
+}
+.left{
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.right{
+  display: inline-block;
 }
