Create and Edit for Sites completed

--- a/app/views/sites/_site.html.erb
+++ b/app/views/sites/_site.html.erb
@@ -3,6 +3,8 @@
   	<td><%= site.company %></td>
   	<td><%= site.city %></td>
   	<td><%= site.state %></td>
+  	<td><%= site.description %></td>
+  	<td><%= link_to "View", site_load_profile_path(site) %></td>
   	<td><%= link_to "Edit", edit_user_path(@user) %></td>
 	<td><%= link_to "Select", edit_user_path(@user) %></td>
 	<td><%= link_to "Delete", edit_user_path(@user) %></td>
