--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
       <ul class="nav pull-right">
       	  <% if signed_in? %>
             <li><%= link_to "Profile",          current_user %></li>
+            <li><%= link_to "Sites",            site_path(current_user) %></li>
             <li><%= link_to "Bill Comparison",  '/input' %></li>
             <li><%= link_to "Sign Out",         signout_path %></li>            
           <% else %>
