--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -8,6 +8,7 @@
 		
       	<div>
       		<%= f.hidden_field :user_id, value: @current_user.id %>
+          <%= f.hidden_field :is_site_saved, value: true %>
       	</div>
 
 		<div class="left">
