--- a/app/views/tariff_tools/input.html.erb
+++ b/app/views/tariff_tools/input.html.erb
@@ -31,17 +31,20 @@
 			<%=fields_for @site_load_profile do |g| %>
 				<%= render 'shared/error_messages', object: g.object %>
 
-				<br> <!-- enters a blank line, ie: line break -->
-				<%= g.label :demand_in_kW, "Demand (in kW)" %>
-				<%= g.text_field :demand_in_kW, {:value => '100' } %>
+                <%= g.hidden_field :data_source, value: 'Monthly' %>            	
+                <%#= g.hidden_field :site_id, value: f.id %>
 
 				<br> <!-- enters a blank line, ie: line break -->
-				<%= g.label :usage_in_kWh, "Usage (in kWh)" %>
-				<%= g.text_field :usage_in_kWh, {:value => '10000' } %>
+				<%= g.label :all_usage, "All Usage (in kWh)" %>
+				<%= g.text_field :all_usage, {:value => '10000' } %>
 
 				<br> <!-- enters a blank line, ie: line break -->
-				<%= g.label :bill_date, "Bill Date (yyyy-mm-dd)" %>
-				<%= g.text_field :bill_date, {:value => '2013-10-01' } %>
+				<%= g.label :all_demand, "All Demand (in kW)" %>
+				<%= g.text_field :all_demand, {:value => '100' } %>
+				
+				<br> <!-- enters a blank line, ie: line break -->
+				<%= g.label :meter_read_date, "Meter Read Date (yyyy-mm-dd)" %>
+				<%= g.text_field :meter_read_date, {:value => '2013-10-01' } %>
 
 			<% end %>
 
