--- a/app/views/tariff_mailer/database_error.text.erb
+++ b/app/views/tariff_mailer/database_error.text.erb
@@ -4,8 +4,8 @@ Site id:		<%= @site.id %>
 Zip Code:		<%= @site.zip_code %>
 Phases:			<%= @site.phases %>
 
-Demand:			<%= @site_load_profile.demand %>
-Usage:			<%= @site_load_profile.usage %>
+Demand:			<%= @site_load_profile.all_demand %>
+Usage:			<%= @site_load_profile.all_usage %>
 Meter Read Date:<%= @site_load_profile.meter_read_date %>
 
 By User (id):	<%= @site.user_id %>
