--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
       	  <% if signed_in? %>
             <li><%= link_to "Profile",          current_user %></li>
             <li><%= link_to "Sites",            site_path(current_user) %></li>
-            <li><%= link_to "Bill Comparison",  '/input' %></li>
+            <li><%= link_to "Bill Comparison",  tool_path %></li>
             <li><%= link_to "Sign Out",         signout_path %></li>            
           <% else %>
             <li><%= link_to "View Demo",  signin_path %></li>
